Start of content

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
          <li>Lawn maintenance</li>
          <li>Tree pruning</li>
          <li>bush pruning</li>
+         <li>weed removal</li>
        </ol>
      </div>
   </body>
